@@ -1,4 +1,5 @@
 HEAD
+	+ Force DNS restart when users mode changed
 	+ Force service principals update on _postServiceHook in external AD mode
 	+ userExists and groupExists discriminates between shown objects and
 	  objects hid by SID
